@@ -42,7 +42,6 @@ RelaxPermissions=0
 RetryDelay=3
 UserMaxFile=65536
 SessionMaxFile=524388
-VerboseAuth=true
 
 [xdmcp]
 Enable=false
