@@ -2589,20 +2589,6 @@ tr_TR
 	      <expand>False</expand>
 	      <fill>False</fill>
 	    </child>
-
-	    <widget>
-	      <class>GtkCheckButton</class>
-	      <name>verbose_auth</name>
-	      <can_focus>True</can_focus>
-	      <signal>
-		<name>clicked</name>
-		<handler>can_apply_now</handler>
-		<last_modification_time>Tue, 21 Mar 2000 21:30:04 GMT</last_modification_time>
-	      </signal>
-	      <label>Authentication errors should be verbose</label>
-	      <active>False</active>
-	      <draw_indicator>True</draw_indicator>
-	    </widget>
 	  </widget>
 
 	  <widget>
